--- a/HTML_CSS/style.css
+++ b/HTML_CSS/style.css
@@ -1,70 +1,115 @@
-body {
-    font-family: Arial, sans-serif;
+/* Resetting default styles */
+body, ul {
     margin: 0;
     padding: 0;
 }
-
+/* Styling header */
 header {
-    background-color: #333;
-    color: #fff;
+    background-color: #f8f9fa;
     padding: 20px;
     text-align: center;
+    
 }
-
-nav ul {
-    list-style-type: none;
+header h1 {
     margin: 0;
-    padding: 0;
+    font-size: 50px;
+    color: #373131;
 }
-
+/* Styling navigation */
+nav ul {
+    list-style: none;
+    padding: 30;
+    margin: 0;
+    display: flex; /* Making it horizontal */
+   
+    justify-content: space-around; /* Centering items */
+    
+}
 nav ul li {
-    display: inline;
-    margin-right: 20px;
+    margin: 0 10px;
 }
-
 nav ul li a {
-    color: #fff;
     text-decoration: none;
-}
-
-.hero {
-    background-image: url('hero-image.jpg');
-    background-size: cover;
-    color: #fff;
-    text-align: center;
-    padding: 100px 20px;
-}
-
-.btn {
-    background-color: #333;
-    color: #fff;
-    padding: 10px 20px;
-    text-decoration: none;
+    color: #333;
+    font-weight: bold;
+    padding: 5px 10px;
     border-radius: 5px;
+    transition: background-color 0.3s ease;
 }
-
-.menu {
+nav ul li a:hover {
+    background-color: #ddd;
+}
+/* Styling sections */
+.home{
+    padding: 50px 20px;
+    text-align: center;
+    height: 500px;
+    background-image: url("homebg.jpeg");
+    background-size: cover;
+    background-position: center;
+    color: black;
+    font-size: xx-large;
+}
+.gallery {
+    padding: 50px 20px;
+    text-align: center;
+    height: auto;
+}
+.gallery img {
+    max-width: 90vw; /* Set maximum width to 90% of viewport width */
+    height: auto;
+    margin: 0px;
+    padding: 10px;
+}
+.contact {
     padding: 50px 20px;
     text-align: center;
 }
 
-.menu-item {
+.contact h2 {
     margin-bottom: 20px;
 }
 
-.menu-item h3 {
-    margin-bottom: 10px;
+.form-group {
+    margin-bottom: 20px;
+    text-align: left;
 }
 
-.about {
-    background-color: #f4f4f4;
-    padding: 50px 20px;
-    text-align: center;
+.form-group label {
+    display: block;
+    margin-bottom: 5px;
 }
 
-.footer {
-    background-color: #333;
+.form-group input,
+.form-group textarea {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 16px;
+}
+
+.form-group textarea {
+    resize: vertical;
+}
+
+button[type="submit"] {
+    padding: 10px 20px;
+    background-color: #007bff;
     color: #fff;
-    text-align: center;
-    padding: 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    transition: background-color 0.3s ease;
 }
+
+button[type="submit"]:hover {
+    background-color: #0056b3;
+} 
+
+#container {
+    overflow-y: scroll;
+    scroll-behavior: smooth;
+}
+
